--- a/App/src/main/res/layout/activity_event_details.xml
+++ b/App/src/main/res/layout/activity_event_details.xml
@@ -23,7 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            class="com.google.android.gms.maps.SupportMapFragment"
+            />
 
         <LinearLayout
             android:orientation="vertical"
