--- a/App/src/main/res/layout/activity_event_details.xml
+++ b/App/src/main/res/layout/activity_event_details.xml
@@ -41,7 +41,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Nome Evento"
                 android:fontFamily="sans-serif-light"
-                android:id="@+id/event_name" />
+                android:id="@+id/event_name"
+                android:maxLines="2" />
 
             <LinearLayout
                 android:orientation="horizontal"
