--- a/App/src/main/res/layout/activity_add_new_alarm.xml
+++ b/App/src/main/res/layout/activity_add_new_alarm.xml
@@ -24,7 +24,7 @@
 
             <EditText
                 android:id="@+id/event_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="6"
                 android:fontFamily="sans-serif-light"
@@ -33,7 +33,7 @@
 
             <EditText
                 android:id="@+id/address"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/event_name"
                 android:ems="6"
@@ -43,7 +43,7 @@
 
             <EditText
                 android:id="@+id/city"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/address"
                 android:ems="6"
@@ -53,7 +53,7 @@
 
             <EditText
                 android:id="@+id/country"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/city"
                 android:ems="6"
