--- a/App/src/main/res/layout/activity_alarm_ring.xml
+++ b/App/src/main/res/layout/activity_alarm_ring.xml
@@ -13,6 +13,18 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Alarm"
+            android:id="@+id/textView"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
+            android:textColorHighlight="#ffffff"
+            android:textColor="#ffffff" />
+
         <TextClock
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -39,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
+
                 android:id="@+id/name"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical|center_horizontal"
@@ -49,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Medium Text"
+
                 android:id="@+id/time"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical|center_horizontal"
@@ -59,19 +71,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Medium Text"
+
                 android:id="@+id/address"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical|center_horizontal"
                 android:textColor="#ffffff" />
         </LinearLayout>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="New Button"
-            android:id="@+id/stop"
-            android:layout_weight="2"
-            android:onClick="stopAlarm"/>
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="2">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:id="@+id/stop"
+                android:layout_weight="2"
+                android:onClick="stopAlarm"
+                android:background="@drawable/stop_alarm"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
     </LinearLayout>
 </FrameLayout>
