--- a/App/src/main/res/layout/fragment_alarms.xml
+++ b/App/src/main/res/layout/fragment_alarms.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="sans-serif-light"
             android:onClick="openAddNewActivity"
             android:text="Add New Alarm" />
 
