--- a/App/src/main/res/layout/activity_account_manager.xml
+++ b/App/src/main/res/layout/activity_account_manager.xml
@@ -3,43 +3,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0EFF4"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.umorning.activities.AccountManagerActivity"
-    >
+    tools:context="com.example.umorning.activities.AccountManagerActivity">
 
-
-    <ImageButton
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:background="@drawable/eventbrite"
-        android:onClick="eventbriteAuth"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="41dp" />
+        android:layout_centerVertical="true">
 
-    <com.facebook.widget.LoginButton
-        android:id="@+id/authButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="45dp"
-        android:gravity="center_vertical"
-        android:layout_above="@+id/imageButton"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/account_text"
+            android:padding="25dp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/account_text"
-        android:id="@+id/textView"
-        android:fontFamily="sans-serif-light"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="47dp" />
+        <com.facebook.widget.LoginButton
+            android:id="@+id/authButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:padding="25dp"
+            android:gravity="center_vertical" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:padding="25dp"
+            android:layout_below="@+id/authButton"
+            android:background="@drawable/eventbrite"
+            android:onClick="eventbriteAuth" />
+
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
