--- a/App/src/main/res/layout/activity_post_metag.xml
+++ b/App/src/main/res/layout/activity_post_metag.xml
@@ -34,10 +34,11 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/sunny"
+                android:id="@+id/clear"
                 android:minHeight="110dp"
                 android:minWidth="110dp"
-                android:background="@drawable/sunny" />
+                android:background="@drawable/sunny"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -45,7 +46,8 @@
                 android:id="@+id/partlyCloudy"
                 android:background="@drawable/partly_sunny"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -53,7 +55,8 @@
                 android:id="@+id/cloudy"
                 android:background="@drawable/cloudy"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
         </TableRow>
 
         <TableRow
@@ -69,7 +72,8 @@
                 android:background="@drawable/rainy"
                 android:longClickable="true"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -77,7 +81,8 @@
                 android:id="@+id/stormy"
                 android:background="@drawable/stormy"
                 android:minWidth="110dp"
-                android:minHeight="110dp" />
+                android:minHeight="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -85,7 +90,8 @@
                 android:id="@+id/windy"
                 android:background="@drawable/windy"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
         </TableRow>
 
         <TableRow
@@ -100,7 +106,8 @@
                 android:id="@+id/snowy"
                 android:background="@drawable/snowy"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -108,7 +115,8 @@
                 android:id="@+id/snowflurries"
                 android:background="@drawable/snowflurries"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -116,7 +124,8 @@
                 android:id="@+id/hailing"
                 android:background="@drawable/hailing"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
         </TableRow>
 
         <TableRow
@@ -130,7 +139,8 @@
                 android:id="@+id/foggy"
                 android:background="@drawable/foggy"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -138,7 +148,8 @@
                 android:id="@+id/heavyseas"
                 android:background="@drawable/heavyseas"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -146,7 +157,8 @@
                 android:id="@+id/calmseas"
                 android:background="@drawable/calmseas"
                 android:minHeight="110dp"
-                android:minWidth="110dp" />
+                android:minWidth="110dp"
+                android:onClick="postMetag" />
         </TableRow>
 
     </TableLayout>
