--- a/App/src/main/res/menu/main.xml
+++ b/App/src/main/res/menu/main.xml
@@ -17,6 +17,14 @@
         android:showAsAction="never"
         android:title="Accounts" />
 
+
+    <item
+        android:id="@+id/post_metag"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Post weather" />
+
     <item
         android:id="@+id/menu_settings"
         android:icon="@android:drawable/ic_menu_preferences"
@@ -25,10 +33,10 @@
         android:title="Settings" />
 
     <item
-        android:id="@+id/post_metag"
+        android:id="@+id/menu_achievements"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="Post weather" />
+        android:title="Achievements" />
 
 </menu>
